--- a/css/style.css
+++ b/css/style.css
@@ -1060,6 +1060,7 @@ ul {
     border-radius: 14px;
     transition: 0.3s;
     display: flex;
+    z-index: -1;
     flex-direction: column;
     box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); }
     .slide-container .swiper-slide .slide-title {
@@ -1097,10 +1098,11 @@ ul {
         filter: blur(0); }
     .slide-container .swiper-slide.swiper-slide-next {
       z-index: 1;
+      transition: 0.3s;
       transform: scale(1.3); }
       @media (max-width: 575.98px) {
         .slide-container .swiper-slide.swiper-slide-next {
-          transform: scale(1.4); } }
+          transform: scale(1.3); } }
 
 .swiper-pagination {
   bottom: 30px !important;
