--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1022,6 +1022,7 @@ ul
 		border-radius: 14px
 		transition: $transition
 		display: flex
+		z-index: -1
 		flex-direction: column
 		box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
 		.slide-title
@@ -1055,9 +1056,10 @@ ul
 				filter: blur(0)
 		&.swiper-slide-next
 			z-index: 1
+			transition: $transition
 			transform: scale(1.3)
 			@media (max-width: 575.98px)
-				transform: scale(1.4)
+				transform: scale(1.3)
 
 .swiper-pagination
 	bottom: 30px !important
