--- a/css/style.css
+++ b/css/style.css
@@ -1098,11 +1098,7 @@ ul {
         filter: blur(0); }
     .slide-container .swiper-slide.swiper-slide-next {
       z-index: 1;
-      transition: 0.3s;
-      transform: scale(1.3); }
-      @media (max-width: 575.98px) {
-        .slide-container .swiper-slide.swiper-slide-next {
-          transform: scale(1.3); } }
+      transition: 0.3s; }
 
 .swiper-pagination {
   bottom: 30px !important;
