--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1057,9 +1057,9 @@ ul
 		&.swiper-slide-next
 			z-index: 1
 			transition: $transition
-			transform: scale(1.3)
-			@media (max-width: 575.98px)
-				transform: scale(1.3)
+			// transform: scale(1.3)
+			// @media (max-width: 575.98px)
+			// 	transform: scale(1.4)
 
 .swiper-pagination
 	bottom: 30px !important
