--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1022,7 +1022,7 @@ ul
 		border-radius: 14px
 		transition: $transition
 		display: flex
-		z-index: -1
+		// z-index: -1
 		flex-direction: column
 		box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
 		.slide-title
@@ -1050,13 +1050,13 @@ ul
 			img 
 				height: 60px
 		&:not(.swiper-slide-next)
-			filter: blur(1px)
-			cursor: pointer
+			// filter: blur(1px)
+			// cursor: pointer
 			&:hover
-				filter: blur(0)
+				// filter: blur(0)
 		&.swiper-slide-next
-			z-index: 1
-			transition: $transition
+			// z-index: 1
+			// transition: $transition
 			// transform: scale(1.3)
 			// @media (max-width: 575.98px)
 			// 	transform: scale(1.4)
