--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1049,32 +1049,32 @@ ul
 			padding: 12px 6px 
 			img 
 				height: 60px
-		&:not(.swiper-slide-next)
+		// &:not(.swiper-slide-next)
 			// filter: blur(1px)
 			// cursor: pointer
-			&:hover
+			// &:hover
 				// filter: blur(0)
-		&.swiper-slide-next
+		// &.swiper-slide-next
 			// z-index: 1
 			// transition: $transition
 			// transform: scale(1.3)
 			// @media (max-width: 575.98px)
 			// 	transform: scale(1.4)
 
-.swiper-pagination
-	bottom: 30px !important
-	width: 100% !important
-	.swiper-pagination-bullet
-		background-color: $color-light-blue
-		opacity: 1
-		transform: scale(1)
-		&:hover
-			background: #B2E2FF
-	.swiper-pagination-bullet-active
-		background: #B2E2FF
-		width: 28px
-		height: 8px
-		border-radius: 8px
+// .swiper-pagination
+// 	bottom: 30px !important
+// 	width: 100% !important
+// 	.swiper-pagination-bullet
+// 		background-color: $color-light-blue
+// 		opacity: 1
+// 		transform: scale(1)
+// 		&:hover
+// 			background: #B2E2FF
+// 	.swiper-pagination-bullet-active
+// 		background: #B2E2FF
+// 		width: 28px
+// 		height: 8px
+// 		border-radius: 8px
 
 // LANDING PAGE
 
