--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1013,17 +1013,17 @@ ul
 	margin: 36px auto 46px
 
 .slide-container 
-	padding: 50px 5px
-	min-height: 350px
-	@media (max-width: 575.98px)
-		min-height: 280px
+	// padding: 50px 5px
+	// min-height: 350px
+	// @media (max-width: 575.98px)
+		// min-height: 280px
 	.swiper-slide
 		padding: 18px 15px
 		border-radius: 14px
 		transition: $transition
-		display: flex
+		// display: flex
 		// z-index: -1
-		flex-direction: column
+		// flex-direction: column
 		box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
 		.slide-title
 			font-size: 10px
