--- a/css/style.css
+++ b/css/style.css
@@ -1082,6 +1082,33 @@ ul {
       padding: 12px 6px; }
       .slide-container .swiper-slide img {
         height: 60px; } }
+  .slide-container .swiper-slide:not(.swiper-slide-next) {
+    filter: blur(1px);
+    cursor: pointer; }
+    .slide-container .swiper-slide:not(.swiper-slide-next):hover {
+      filter: blur(0); }
+  .slide-container .swiper-slide.swiper-slide-next {
+    z-index: 1;
+    transition: 0.3s;
+    transform: scale(1.3); }
+    @media (max-width: 575.98px) {
+      .slide-container .swiper-slide.swiper-slide-next {
+        transform: scale(1.4); } }
+
+.swiper-pagination {
+  bottom: 30px !important;
+  width: 100% !important; }
+  .swiper-pagination .swiper-pagination-bullet {
+    background-color: #E5F5FF;
+    opacity: 1;
+    transform: scale(1); }
+    .swiper-pagination .swiper-pagination-bullet:hover {
+      background: #B2E2FF; }
+  .swiper-pagination .swiper-pagination-bullet-active {
+    background: #B2E2FF;
+    width: 28px;
+    height: 8px;
+    border-radius: 8px; }
 
 .navbar {
   padding-top: 18px;
