--- a/css/style.css
+++ b/css/style.css
@@ -1049,51 +1049,60 @@ ul {
 .swiper {
   margin: 36px auto 46px; }
 
-.slide-container .swiper-slide {
-  padding: 18px 15px;
-  border-radius: 14px;
-  transition: 0.3s;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); }
-  .slide-container .swiper-slide .slide-title {
-    font-size: 10px;
-    font-weight: 500;
-    line-height: 1.2;
-    padding: 8px 10px 4px; }
-    @media (max-width: 575.98px) {
-      .slide-container .swiper-slide .slide-title {
-        font-size: 8px;
-        padding: 0; } }
-  .slide-container .swiper-slide .slide-prise {
-    font-size: 10px;
-    font-weight: bold; }
-    @media (max-width: 575.98px) {
-      .slide-container .swiper-slide .slide-prise {
-        font-size: 8px; } }
-  .slide-container .swiper-slide img {
-    height: 115px;
-    margin: 0 auto; }
+.slide-container {
+  padding: 50px 0px;
+  min-height: 350px; }
   @media (max-width: 575.98px) {
-    .slide-container .swiper-slide {
-      padding: 12px 10px; }
-      .slide-container .swiper-slide img {
-        height: 80px; } }
-  @media (max-width: 370.98px) {
-    .slide-container .swiper-slide {
-      padding: 12px 6px; }
-      .slide-container .swiper-slide img {
-        height: 60px; } }
-  .slide-container .swiper-slide:not(.swiper-slide-next) {
-    filter: blur(1px);
-    cursor: pointer; }
-    .slide-container .swiper-slide:not(.swiper-slide-next):hover {
-      filter: blur(0); }
-  .slide-container .swiper-slide.swiper-slide-next {
-    z-index: 1;
+    .slide-container {
+      min-height: 280px; } }
+  .slide-container .swiper-slide {
+    padding: 18px 15px;
+    border-radius: 14px;
     transition: 0.3s;
-    transform: scale(1.3); }
+    display: flex;
+    z-index: -1;
+    flex-direction: column;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); }
+    .slide-container .swiper-slide .slide-title {
+      font-size: 10px;
+      font-weight: 500;
+      line-height: 1.2;
+      padding: 8px 10px 4px; }
+      @media (max-width: 575.98px) {
+        .slide-container .swiper-slide .slide-title {
+          font-size: 8px;
+          padding: 0; } }
+    .slide-container .swiper-slide .slide-prise {
+      font-size: 10px;
+      font-weight: bold; }
+      @media (max-width: 575.98px) {
+        .slide-container .swiper-slide .slide-prise {
+          font-size: 8px; } }
+    .slide-container .swiper-slide img {
+      height: 115px;
+      margin: 0 auto; }
     @media (max-width: 575.98px) {
-      .slide-container .swiper-slide.swiper-slide-next {
-        transform: scale(1.4); } }
+      .slide-container .swiper-slide {
+        padding: 12px 10px; }
+        .slide-container .swiper-slide img {
+          height: 80px; } }
+    @media (max-width: 370.98px) {
+      .slide-container .swiper-slide {
+        padding: 12px 6px; }
+        .slide-container .swiper-slide img {
+          height: 60px; } }
+    .slide-container .swiper-slide:not(.swiper-slide-next) {
+      filter: blur(1px);
+      cursor: pointer; }
+      .slide-container .swiper-slide:not(.swiper-slide-next):hover {
+        filter: blur(0); }
+    .slide-container .swiper-slide.swiper-slide-next {
+      z-index: 1;
+      transition: 0.3s;
+      transform: scale(1.3); }
+      @media (max-width: 575.98px) {
+        .slide-container .swiper-slide.swiper-slide-next {
+          transform: scale(1.4); } }
 
 .swiper-pagination {
   bottom: 30px !important;
