--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1020,7 +1020,7 @@ ul
 	.swiper-slide
 		padding: 18px 15px
 		border-radius: 14px
-		transition: $transition
+		transition: 1s
 		display: flex
 		z-index: -1
 		flex-direction: column
@@ -1056,7 +1056,7 @@ ul
 				filter: blur(0)
 		&.swiper-slide-next
 			z-index: 1
-			transition: $transition
+			transition: 1s
 			transform: scale(1.3)
 			@media (max-width: 575.98px)
 				transform: scale(1.4)
