--- a/css/style.css
+++ b/css/style.css
@@ -1102,11 +1102,14 @@ ul {
       transform: scale(1.3); }
       @media (max-width: 575.98px) {
         .slide-container .swiper-slide.swiper-slide-next {
-          transform: scale(1.4); } }
+          transform: scale(1.6); } }
 
 .swiper-pagination {
   bottom: 30px !important;
   width: 100% !important; }
+  @media (max-width: 575.98px) {
+    .swiper-pagination {
+      bottom: 10px !important; } }
   .swiper-pagination .swiper-pagination-bullet {
     background-color: #E5F5FF;
     opacity: 1;
