--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1059,11 +1059,13 @@ ul
 			transition: 1s
 			transform: scale(1.3)
 			@media (max-width: 575.98px)
-				transform: scale(1.4)
+				transform: scale(1.6)
 
 .swiper-pagination
 	bottom: 30px !important
 	width: 100% !important
+	@media (max-width: 575.98px)
+		bottom: 10px !important
 	.swiper-pagination-bullet
 		background-color: $color-light-blue
 		opacity: 1
