--- a/css/style.css
+++ b/css/style.css
@@ -1049,6 +1049,12 @@ ul {
 .swiper {
   margin: 36px auto 46px; }
 
+.swiper-wrapper {
+  -moz-transform-style: flat;
+  -webkit-transform-style: flat;
+  -ms-transform-style: flat;
+  transform-style: flat; }
+
 .slide-container {
   padding: 50px 0px;
   min-height: 350px; }
@@ -1062,7 +1068,11 @@ ul {
     display: flex;
     z-index: -1;
     flex-direction: column;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1); }
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+    -moz-transform-style: flat;
+    -webkit-transform-style: flat;
+    -ms-transform-style: flat;
+    transform-style: flat; }
     .slide-container .swiper-slide .slide-title {
       font-size: 10px;
       font-weight: 500;
