--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1012,6 +1012,12 @@ ul
 .swiper
 	margin: 36px auto 46px
 
+.swiper-wrapper
+	-moz-transform-style: flat
+	-webkit-transform-style: flat
+	-ms-transform-style: flat
+	transform-style: flat
+
 .slide-container 
 	padding: 50px 0px
 	min-height: 350px
@@ -1025,6 +1031,10 @@ ul
 		z-index: -1
 		flex-direction: column
 		box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
+		-moz-transform-style: flat
+		-webkit-transform-style: flat
+		-ms-transform-style: flat
+		transform-style: flat
 		.slide-title
 			font-size: 10px
 			font-weight: 500
