--- a/css/style.css
+++ b/css/style.css
@@ -1077,7 +1077,8 @@ ul {
       font-size: 10px;
       font-weight: 500;
       line-height: 1.2;
-      padding: 8px 10px 4px; }
+      padding: 8px 10px 4px;
+      transform: scale(1); }
       @media (max-width: 575.98px) {
         .slide-container .swiper-slide .slide-title {
           font-size: 8px;
@@ -1108,6 +1109,7 @@ ul {
         filter: blur(0); }
     .slide-container .swiper-slide.swiper-slide-next {
       z-index: 1;
+      filter: blur(0);
       transition: 1s;
       transform: scale(1.3); }
       @media (max-width: 575.98px) {
