--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1040,6 +1040,7 @@ ul
 			font-weight: 500
 			line-height: 1.2
 			padding: 8px 10px 4px
+			transform: scale(1)
 			@media (max-width: 575.98px)
 				font-size: 8px
 				padding: 0
@@ -1066,6 +1067,7 @@ ul
 				filter: blur(0)
 		&.swiper-slide-next
 			z-index: 1
+			filter: blur(0)
 			transition: 1s
 			transform: scale(1.3)
 			@media (max-width: 575.98px)
