--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1025,7 +1025,7 @@ ul
 		z-index: -1
 		flex-direction: column
 		box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
-		transform: scale(1)
+		transform: scale(0.7)
 		.slide-title
 			font-size: 10px
 			font-weight: 500
@@ -1059,9 +1059,9 @@ ul
 			z-index: 1
 			filter: blur(0)
 			transition: 1s
-			transform: scale(1.3)
-			@media (max-width: 575.98px)
-				transform: scale(1.6)
+			transform: scale(1)
+			// @media (max-width: 575.98px)
+				// transform: scale(1.6)
 
 .swiper-pagination
 	bottom: 30px !important
