--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1018,50 +1018,53 @@ ul
 	@media (max-width: 575.98px)
 		min-height: 280px
 	.swiper-slide
-		padding: 18px 15px
-		border-radius: 14px
-		transition: 1s
-		display: flex
-		z-index: -1
-		flex-direction: column
-		box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
-		transform: scale(1)
-		.slide-title
-			font-size: 10px
-			font-weight: 500
-			line-height: 1.2
-			padding: 8px 10px 4px
-			@media (max-width: 575.98px)
-				font-size: 8px
-				padding: 0
-		.slide-prise
-			font-size: 10px
-			font-weight: bold
-			@media (max-width: 575.98px)
-				font-size: 8px
-		img 
-			height: 115px
-			margin: 0 auto
-		@media (max-width: 575.98px)
-			padding: 12px 10px 
-			img 
-				height: 80px
-		@media (max-width: 370.98px)
-			padding: 12px 6px 
-			img 
-				height: 60px
-		&:not(.swiper-slide-next)
-			filter: blur(1px)
-			cursor: pointer
-			&:hover
-				filter: blur(0)
-		&.swiper-slide-next
-			z-index: 1
-			filter: blur(0)
+		.cart-donation
+			padding: 18px 15px
+			border-radius: 14px
 			transition: 1s
-			transform: scale(1.3)
+			display: flex
+			z-index: -1
+			flex-direction: column
+			box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
+			transform: scale(1)
+			.slide-title
+				font-size: 10px
+				font-weight: 500
+				line-height: 1.2
+				padding: 8px 10px 4px
+				@media (max-width: 575.98px)
+					font-size: 8px
+					padding: 0
+			.slide-prise
+				font-size: 10px
+				font-weight: bold
+				@media (max-width: 575.98px)
+					font-size: 8px
+			img 
+				height: 115px
+				margin: 0 auto
 			@media (max-width: 575.98px)
-				transform: scale(1.6)
+				padding: 12px 10px 
+				img 
+					height: 80px
+			@media (max-width: 370.98px)
+				padding: 12px 6px 
+				img 
+					height: 60px
+		&:not(.swiper-slide-next)
+			.cart-donation
+				filter: blur(1px)
+				cursor: pointer
+				&:hover
+					filter: blur(0)
+		&.swiper-slide-next
+			.cart-donation
+				z-index: 1
+				filter: blur(0)
+				transition: 1s
+				transform: scale(1.3)
+				@media (max-width: 575.98px)
+					transform: scale(1.6)
 
 .swiper-pagination
 	bottom: 30px !important
