--- a/css/style.css
+++ b/css/style.css
@@ -1055,56 +1055,55 @@ ul {
   @media (max-width: 575.98px) {
     .slide-container {
       min-height: 280px; } }
-  .slide-container .swiper-slide .cart-donation {
-    padding: 18px 15px;
-    border-radius: 14px;
-    transition: 1s;
-    display: flex;
-    z-index: -1;
-    flex-direction: column;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
-    transform: scale(1); }
-    .slide-container .swiper-slide .cart-donation .slide-title {
-      font-size: 10px;
-      font-weight: 500;
-      line-height: 1.2;
-      padding: 8px 10px 4px; }
+  .slide-container .swiper-slide {
+    z-index: -1; }
+    .slide-container .swiper-slide .cart-donation {
+      padding: 18px 15px;
+      border-radius: 14px;
+      transition: 1s;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+      transform: scale3d(0.73, 0.73, 1); }
+      .slide-container .swiper-slide .cart-donation .slide-title {
+        font-size: 10px;
+        font-weight: 500;
+        line-height: 1.2;
+        padding: 8px 10px 4px; }
+        @media (max-width: 575.98px) {
+          .slide-container .swiper-slide .cart-donation .slide-title {
+            font-size: 8px;
+            padding: 0; } }
+      .slide-container .swiper-slide .cart-donation .slide-prise {
+        font-size: 10px;
+        font-weight: bold; }
+        @media (max-width: 575.98px) {
+          .slide-container .swiper-slide .cart-donation .slide-prise {
+            font-size: 8px; } }
+      .slide-container .swiper-slide .cart-donation img {
+        height: 115px;
+        margin: 0 auto; }
       @media (max-width: 575.98px) {
-        .slide-container .swiper-slide .cart-donation .slide-title {
-          font-size: 8px;
-          padding: 0; } }
-    .slide-container .swiper-slide .cart-donation .slide-prise {
-      font-size: 10px;
-      font-weight: bold; }
-      @media (max-width: 575.98px) {
-        .slide-container .swiper-slide .cart-donation .slide-prise {
-          font-size: 8px; } }
-    .slide-container .swiper-slide .cart-donation img {
-      height: 115px;
-      margin: 0 auto; }
-    @media (max-width: 575.98px) {
-      .slide-container .swiper-slide .cart-donation {
-        padding: 12px 10px; }
-        .slide-container .swiper-slide .cart-donation img {
-          height: 80px; } }
-    @media (max-width: 370.98px) {
-      .slide-container .swiper-slide .cart-donation {
-        padding: 12px 6px; }
-        .slide-container .swiper-slide .cart-donation img {
-          height: 60px; } }
-  .slide-container .swiper-slide:not(.swiper-slide-next) .cart-donation {
-    filter: blur(1px);
-    cursor: pointer; }
-    .slide-container .swiper-slide:not(.swiper-slide-next) .cart-donation:hover {
-      filter: blur(0); }
-  .slide-container .swiper-slide.swiper-slide-next .cart-donation {
-    z-index: 1;
-    filter: blur(0);
-    transition: 1s;
-    transform: scale(1.3); }
-    @media (max-width: 575.98px) {
+        .slide-container .swiper-slide .cart-donation {
+          padding: 12px 10px; }
+          .slide-container .swiper-slide .cart-donation img {
+            height: 80px; } }
+      @media (max-width: 370.98px) {
+        .slide-container .swiper-slide .cart-donation {
+          padding: 12px 6px; }
+          .slide-container .swiper-slide .cart-donation img {
+            height: 60px; } }
+    .slide-container .swiper-slide:not(.swiper-slide-next) .cart-donation {
+      filter: blur(1px);
+      cursor: pointer; }
+      .slide-container .swiper-slide:not(.swiper-slide-next) .cart-donation:hover {
+        filter: blur(0); }
+    .slide-container .swiper-slide.swiper-slide-next {
+      z-index: 1; }
       .slide-container .swiper-slide.swiper-slide-next .cart-donation {
-        transform: scale(1.6); } }
+        filter: blur(0);
+        transition: 1s;
+        transform: scale3d(1, 1, 1); }
 
 .swiper-pagination {
   bottom: 30px !important;
