--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1018,15 +1018,15 @@ ul
 	@media (max-width: 575.98px)
 		min-height: 280px
 	.swiper-slide
+		z-index: -1
 		.cart-donation
 			padding: 18px 15px
 			border-radius: 14px
 			transition: 1s
 			display: flex
-			z-index: -1
 			flex-direction: column
 			box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
-			transform: scale(1)
+			transform: scale3d(0.73, 0.73, 1)
 			.slide-title
 				font-size: 10px
 				font-weight: 500
@@ -1058,13 +1058,13 @@ ul
 				&:hover
 					filter: blur(0)
 		&.swiper-slide-next
+			z-index: 1
 			.cart-donation
-				z-index: 1
 				filter: blur(0)
 				transition: 1s
-				transform: scale(1.3)
-				@media (max-width: 575.98px)
-					transform: scale(1.6)
+				transform: scale3d(1, 1, 1)
+				// @media (max-width: 575.98px)
+				// 	transform: scale(1.6)
 
 .swiper-pagination
 	bottom: 30px !important
