--- a/css/style.css
+++ b/css/style.css
@@ -1064,7 +1064,7 @@ ul {
       display: flex;
       flex-direction: column;
       box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
-      transform: scale3d(0.73, 0.73, 1); }
+      transform: scale3d(1, 1, 1); }
       .slide-container .swiper-slide .cart-donation .slide-title {
         font-size: 10px;
         font-weight: 500;
@@ -1103,7 +1103,10 @@ ul {
       .slide-container .swiper-slide.swiper-slide-next .cart-donation {
         filter: blur(0);
         transition: 1s;
-        transform: scale3d(1, 1, 1); }
+        transform: scale3d(1.3, 1.3, 1); }
+        @media (max-width: 575.98px) {
+          .slide-container .swiper-slide.swiper-slide-next .cart-donation {
+            transform: scale3d(1.5, 1.5, 1); } }
 
 .swiper-pagination {
   bottom: 30px !important;
