--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1026,7 +1026,7 @@ ul
 			display: flex
 			flex-direction: column
 			box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
-			transform: scale3d(0.73, 0.73, 1)
+			transform: scale3d(1, 1, 1)
 			.slide-title
 				font-size: 10px
 				font-weight: 500
@@ -1062,9 +1062,9 @@ ul
 			.cart-donation
 				filter: blur(0)
 				transition: 1s
-				transform: scale3d(1, 1, 1)
-				// @media (max-width: 575.98px)
-				// 	transform: scale(1.6)
+				transform: scale3d(1.3, 1.3, 1)
+				@media (max-width: 575.98px)
+					transform: scale3d(1.5, 1.5, 1)
 
 .swiper-pagination
 	bottom: 30px !important
