--- a/css/style.css
+++ b/css/style.css
@@ -1046,86 +1046,6 @@ ul {
     .section-gray {
       font-size: 14px; } }
 
-.swiper {
-  margin: 36px auto 46px; }
-
-.slide-container {
-  padding: 50px 5px;
-  min-height: 350px; }
-  @media (max-width: 575.98px) {
-    .slide-container {
-      min-height: 280px; } }
-  .slide-container .swiper-slide {
-    z-index: -1; }
-    .slide-container .swiper-slide .cart-donation {
-      padding: 18px 15px;
-      border-radius: 14px;
-      transition: 1s;
-      display: flex;
-      flex-direction: column;
-      box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
-      transform: scale3d(1, 1, 1); }
-      .slide-container .swiper-slide .cart-donation .slide-title {
-        font-size: 10px;
-        font-weight: 500;
-        line-height: 1.2;
-        padding: 8px 10px 4px; }
-        @media (max-width: 575.98px) {
-          .slide-container .swiper-slide .cart-donation .slide-title {
-            font-size: 8px;
-            padding: 0; } }
-      .slide-container .swiper-slide .cart-donation .slide-prise {
-        font-size: 10px;
-        font-weight: bold; }
-        @media (max-width: 575.98px) {
-          .slide-container .swiper-slide .cart-donation .slide-prise {
-            font-size: 8px; } }
-      .slide-container .swiper-slide .cart-donation img {
-        height: 115px;
-        margin: 0 auto; }
-      @media (max-width: 575.98px) {
-        .slide-container .swiper-slide .cart-donation {
-          padding: 12px 10px; }
-          .slide-container .swiper-slide .cart-donation img {
-            height: 80px; } }
-      @media (max-width: 370.98px) {
-        .slide-container .swiper-slide .cart-donation {
-          padding: 12px 6px; }
-          .slide-container .swiper-slide .cart-donation img {
-            height: 60px; } }
-    .slide-container .swiper-slide:not(.swiper-slide-next) .cart-donation {
-      filter: blur(1px);
-      cursor: pointer; }
-      .slide-container .swiper-slide:not(.swiper-slide-next) .cart-donation:hover {
-        filter: blur(0); }
-    .slide-container .swiper-slide.swiper-slide-next {
-      z-index: 1; }
-      .slide-container .swiper-slide.swiper-slide-next .cart-donation {
-        filter: blur(0);
-        transition: 1s;
-        transform: scale3d(1.3, 1.3, 1); }
-        @media (max-width: 575.98px) {
-          .slide-container .swiper-slide.swiper-slide-next .cart-donation {
-            transform: scale3d(1.5, 1.5, 1); } }
-
-.swiper-pagination {
-  bottom: 30px !important;
-  width: 100% !important; }
-  @media (max-width: 575.98px) {
-    .swiper-pagination {
-      bottom: 10px !important; } }
-  .swiper-pagination .swiper-pagination-bullet {
-    background-color: #E5F5FF;
-    opacity: 1;
-    transform: scale(1); }
-    .swiper-pagination .swiper-pagination-bullet:hover {
-      background: #B2E2FF; }
-  .swiper-pagination .swiper-pagination-bullet-active {
-    background: #B2E2FF;
-    width: 28px;
-    height: 8px;
-    border-radius: 8px; }
-
 .navbar {
   padding-top: 18px;
   padding-bottom: 18px; }
@@ -1500,5 +1420,60 @@ ul {
     .box-signup .btn-explore {
       font-size: 14px !important;
       padding: 5.5px 24px; } }
+
+.page-container {
+  padding: 50px;
+  overflow: hidden; }
+
+.swiper-container {
+  margin: 0 auto;
+  position: relative; }
+
+.swiper-wrapper {
+  position: relative;
+  display: block;
+  font-size: 0;
+  width: 780px; }
+
+.swiper-slide {
+  font-size: 0;
+  text-align: center;
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  line-height: 120px; }
+
+.menu-carousel-link {
+  color: white;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  line-height: 120px;
+  transition: 300ms;
+  font-size: 16px;
+  transform: scale3d(0.73, 0.73, 1);
+  text-decoration: none;
+  border-radius: 34px; }
+
+.globocom-slide .menu-carousel-link {
+  background-color: blue; }
+
+.g1-slide .menu-carousel-link {
+  background-color: red; }
+
+.globoesporte-slide .menu-carousel-link {
+  background-color: green; }
+
+.famosos-slide .menu-carousel-link {
+  background-color: orange; }
+
+.gshow-slide .menu-carousel-link {
+  background-color: #EC7D00; }
+
+.techtudo-slide .menu-carousel-link {
+  background-color: #595959; }
+
+.swiper-slide-active .menu-carousel-link {
+  transform: scale3d(1, 1, 1); }
 
 /*# sourceMappingURL=style.css.map */
