--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1459,9 +1459,11 @@ ul
 	line-height: 120px
 	transition: 300ms
 	font-size: 16px
-	transform: scale3d(0.73, 0.73, 1)
+	transform: scale3d(1, 1, 1)
 	text-decoration: none
 	border-radius: 34px
+	&:hover
+		opacity: 1
   
 .globocom-slide 
 	.menu-carousel-link
@@ -1487,6 +1489,8 @@ ul
 	.menu-carousel-link
 		background-color: #595959
   
-.swiper-slide-active .menu-carousel-link
-	transform: scale3d(1, 1, 1)
+.swiper-slide-active
+	z-index: 1
+	.menu-carousel-link
+		transform: scale3d(1.3, 1.3, 1)
 
