--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1435,13 +1435,13 @@ ul
 
 .swiper-container 
 	margin: 0 auto
-	position: relative
+	// position: relative
 
 .swiper-wrapper
-	position: relative
-	display: block
-	font-size: 0
-	width: 780px
+	// position: relative
+	// display: block
+	// font-size: 0
+	// width: 780px
 
 .swiper-slide 
 	font-size: 0
