--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1352,147 +1352,148 @@ ul
 
 // SLIDER
 
-// .swiper
-// 	margin: 36px auto 46px
+.swiper
+	margin: 36px auto 46px
 
-// .slide-container 
-// 	padding: 50px 5px
-// 	min-height: 350px
-// 	@media (max-width: 575.98px)
-// 		min-height: 280px
-// 	.swiper-slide
-// 		z-index: -1
-// 		.cart-donation
-// 			padding: 18px 15px
-// 			border-radius: 14px
-// 			transition: 1s
-// 			display: flex
-// 			flex-direction: column
-// 			box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
-// 			transform: scale3d(1, 1, 1)
-// 			.slide-title
-// 				font-size: 10px
-// 				font-weight: 500
-// 				line-height: 1.2
-// 				padding: 8px 10px 4px
-// 				@media (max-width: 575.98px)
-// 					font-size: 8px
-// 					padding: 0
-// 			.slide-prise
-// 				font-size: 10px
-// 				font-weight: bold
-// 				@media (max-width: 575.98px)
-// 					font-size: 8px
-// 			img 
-// 				height: 115px
-// 				margin: 0 auto
-// 			@media (max-width: 575.98px)
-// 				padding: 12px 10px 
-// 				img 
-// 					height: 80px
-// 			@media (max-width: 370.98px)
-// 				padding: 12px 6px 
-// 				img 
-// 					height: 60px
-// 		&:not(.swiper-slide-next)
-// 			.cart-donation
-// 				filter: blur(1px)
-// 				cursor: pointer
-// 				&:hover
-// 					filter: blur(0)
-// 		&.swiper-slide-next
-// 			z-index: 1
-// 			.cart-donation
-// 				filter: blur(0)
-// 				transition: 1s
-// 				transform: scale3d(1.3, 1.3, 1)
-// 				@media (max-width: 575.98px)
-// 					transform: scale3d(1.5, 1.5, 1)
+.slide-container 
+	padding: 50px 5px
+	min-height: 350px
+	@media (max-width: 575.98px)
+		min-height: 280px
+	.swiper-slide
+		z-index: -1
+		.cart-donation
+			padding: 18px 15px
+			border-radius: 14px
+			transition: 1s
+			display: flex
+			flex-direction: column
+			box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1)
+			transform: scale3d(1, 1, 1)
+			.slide-title
+				font-size: 10px
+				font-weight: 500
+				line-height: 1.2
+				padding: 8px 10px 4px
+				@media (max-width: 575.98px)
+					font-size: 8px
+					padding: 0
+			.slide-prise
+				font-size: 10px
+				font-weight: bold
+				@media (max-width: 575.98px)
+					font-size: 8px
+			img 
+				height: 115px
+				margin: 0 auto
+			@media (max-width: 575.98px)
+				padding: 12px 10px 
+				img 
+					height: 80px
+			@media (max-width: 370.98px)
+				padding: 12px 6px 
+				img 
+					height: 60px
+		&:not(.swiper-slide-next)
+			.cart-donation
+				filter: blur(1px)
+				cursor: pointer
+				&:hover
+					filter: blur(0)
+		&.swiper-slide-next
+			z-index: 1
+			.cart-donation
+				filter: blur(0)
+				transition: 1s
+				transform: scale3d(1.3, 1.3, 1)
+				@media (max-width: 575.98px)
+					transform: scale3d(1.5, 1.5, 1)
 
-// .swiper-pagination
-// 	bottom: 30px !important
-// 	width: 100% !important
-// 	@media (max-width: 575.98px)
-// 		bottom: 10px !important
-// 	.swiper-pagination-bullet
-// 		background-color: $color-light-blue
-// 		opacity: 1
-// 		transform: scale(1)
-// 		&:hover
-// 			background: #B2E2FF
-// 	.swiper-pagination-bullet-active
-// 		background: #B2E2FF
-// 		width: 28px
-// 		height: 8px
-// 		border-radius: 8px
-
-
-
-
-
-
-.page-container
-	padding: 50px
-	overflow: hidden
-
-.swiper-container 
-	margin: 0 auto
-	// position: relative
-
-.swiper-wrapper
-	// position: relative
-	// display: block
-	// font-size: 0
-	// width: 780px
-
-.swiper-slide 
-	font-size: 0
-	text-align: center
-	display: inline-block
-	width: 120px
-	height: 120px
-	line-height: 120px
-
-.menu-carousel-link
-	color: white
-	display: inline-block
-	width: 100%
-	height: 100%
-	line-height: 120px
-	transition: 300ms
-	font-size: 16px
-	transform: scale3d(1, 1, 1)
-	text-decoration: none
-	border-radius: 34px
-	&:hover
+.swiper-pagination
+	bottom: 30px !important
+	width: 100% !important
+	@media (max-width: 575.98px)
+		bottom: 10px !important
+	.swiper-pagination-bullet
+		background-color: $color-light-blue
 		opacity: 1
+		transform: scale(1)
+		&:hover
+			background: #B2E2FF
+	.swiper-pagination-bullet-active
+		background: #B2E2FF
+		width: 28px
+		height: 8px
+		border-radius: 8px
+
+
+
+
+
+
+
+// .page-container
+// 	padding: 50px
+// 	overflow: hidden
+
+// .swiper-container 
+// 	margin: 0 auto
+// 	// position: relative
+
+// .swiper-wrapper
+// 	// position: relative
+// 	// display: block
+// 	// font-size: 0
+// 	// width: 780px
+
+// .swiper-slide 
+// 	font-size: 0
+// 	text-align: center
+// 	display: inline-block
+// 	width: 120px
+// 	height: 120px
+// 	line-height: 120px
+
+// .menu-carousel-link
+// 	color: white
+// 	display: inline-block
+// 	width: 100%
+// 	height: 100%
+// 	line-height: 120px
+// 	transition: 300ms
+// 	font-size: 16px
+// 	transform: scale3d(1, 1, 1)
+// 	text-decoration: none
+// 	border-radius: 34px
+// 	&:hover
+// 		opacity: 1
   
-.globocom-slide 
-	.menu-carousel-link
-		background-color: blue
+// .globocom-slide 
+// 	.menu-carousel-link
+// 		background-color: blue
 
-.g1-slide 
-	.menu-carousel-link
-		background-color: red
+// .g1-slide 
+// 	.menu-carousel-link
+// 		background-color: red
 
-.globoesporte-slide 
-	.menu-carousel-link
-		background-color: green
+// .globoesporte-slide 
+// 	.menu-carousel-link
+// 		background-color: green
 
-.famosos-slide 
-	.menu-carousel-link
-		background-color: orange
+// .famosos-slide 
+// 	.menu-carousel-link
+// 		background-color: orange
 
-.gshow-slide 
-	.menu-carousel-link
-		background-color: #EC7D00
+// .gshow-slide 
+// 	.menu-carousel-link
+// 		background-color: #EC7D00
 
-.techtudo-slide 
-	.menu-carousel-link
-		background-color: #595959
+// .techtudo-slide 
+// 	.menu-carousel-link
+// 		background-color: #595959
   
-.swiper-slide-active
-	z-index: 1
-	.menu-carousel-link
-		transform: scale3d(1.3, 1.3, 1)
+// .swiper-slide-active
+// 	z-index: 1
+// 	.menu-carousel-link
+// 		transform: scale3d(1.3, 1.3, 1)
 
