--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1417,6 +1417,8 @@ ul
 	.swiper-pagination-bullet
 		background-color: $color-light-blue
 		opacity: 1
+		width: 8px
+		animation: width-down linear .4s
 		transform: scale(1)
 		&:hover
 			background: #B2E2FF
@@ -1425,75 +1427,16 @@ ul
 		width: 28px
 		height: 8px
 		border-radius: 8px
+		animation: width-up linear .4s
 
+@keyframes width-down
+	0%
+		width: 28px
+	50%
+		width: 18px
 
-
-
-
-
-
-// .page-container
-// 	padding: 50px
-// 	overflow: hidden
-
-// .swiper-container 
-// 	margin: 0 auto
-// 	// position: relative
-
-// .swiper-wrapper
-// 	// position: relative
-// 	// display: block
-// 	// font-size: 0
-// 	// width: 780px
-
-// .swiper-slide 
-// 	font-size: 0
-// 	text-align: center
-// 	display: inline-block
-// 	width: 120px
-// 	height: 120px
-// 	line-height: 120px
-
-// .menu-carousel-link
-// 	color: white
-// 	display: inline-block
-// 	width: 100%
-// 	height: 100%
-// 	line-height: 120px
-// 	transition: 300ms
-// 	font-size: 16px
-// 	transform: scale3d(1, 1, 1)
-// 	text-decoration: none
-// 	border-radius: 34px
-// 	&:hover
-// 		opacity: 1
-  
-// .globocom-slide 
-// 	.menu-carousel-link
-// 		background-color: blue
-
-// .g1-slide 
-// 	.menu-carousel-link
-// 		background-color: red
-
-// .globoesporte-slide 
-// 	.menu-carousel-link
-// 		background-color: green
-
-// .famosos-slide 
-// 	.menu-carousel-link
-// 		background-color: orange
-
-// .gshow-slide 
-// 	.menu-carousel-link
-// 		background-color: #EC7D00
-
-// .techtudo-slide 
-// 	.menu-carousel-link
-// 		background-color: #595959
-  
-// .swiper-slide-active
-// 	z-index: 1
-// 	.menu-carousel-link
-// 		transform: scale3d(1.3, 1.3, 1)
-
+@keyframes width-up
+	0%
+		width: 8px
+	50%
+		width: 18px
