--- a/css/style.css
+++ b/css/style.css
@@ -1514,5 +1514,27 @@ ul {
     width: 8px; }
   50% {
     width: 18px; } }
+.swiper-button-prev {
+  left: 0; }
+
+.swiper-button-next {
+  right: 0; }
+
+.swiper-button-prev, .swiper-button-next {
+  top: 20%;
+  width: 30%;
+  height: 206px; }
+  .swiper-button-prev:after, .swiper-button-next:after {
+    display: none; }
+  @media (max-width: 575.98px) {
+    .swiper-button-prev, .swiper-button-next {
+      height: 139px;
+      top: 25%;
+      width: 27%; } }
+  @media (max-width: 370.98px) {
+    .swiper-button-prev, .swiper-button-next {
+      height: 119px;
+      top: 25%;
+      width: 27%; } }
 
 /*# sourceMappingURL=style.css.map */
